# lmv

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  configure.ac  hex_gosper_fass.sh  koch_island.sh  koch_reflect.sh  koch_spiral.sh  koch_vomit.sh  lakes.sh  lmv.cpp  nodetree.sh  quad_gosper_fass.sh  square_thing.sh  squareinv.sh  tree.sh
m4/: ax_check_gl.m4  ax_check_glu.m4  ax_check_glut.m4
src/: Makefile.am  bushy_tree.sh  dragon.sh  hex_gosper_fass.sh  koch.sh  koch_cauli.sh  koch_island.sh  koch_reflect.sh  koch_spiral.sh  koch_vomit.sh  kochinv.sh  lakes.sh  lmv.cpp  nodetree.sh  nodetree2.sh  nodetree3.sh  quad_gosper_fass.sh  sierpinski.sh  sierpinski_fass.sh  sponge.sh  square.sh  square_gasket.sh  square_thing.sh  squareinv.sh  tree.sh
