AM_CXXFLAGS = -O2 -Wall
bin_PROGRAMS = lmv
lmv_SOURCES = lmv.cpp
lmv_CPPFLAGS = $(GL_CFLAGS) $(GLU_CFLAGS) $(GLUT_CFLAGS)
lmv_LDADD = $(GL_LIBS) $(GLU_LIBS) $(GLUT_LIBS)
lmv_LDFLAGS = $(GL_LDFLAGS)
dist_bin_SCRIPTS = bushy_tree.sh dragon.sh hex_gosper_fass.sh koch.sh koch_cauli.sh koch_island.sh koch_reflect.sh koch_spiral.sh koch_vomit.sh kochinv.sh lakes.sh nodetree.sh nodetree2.sh nodetree3.sh quad_gosper_fass.sh sierpinski.sh sierpinski_fass.sh sponge.sh square.sh square_gasket.sh square_thing.sh squareinv.sh tree.sh
